add car number text entry

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "automation of registering daily guest parking permit",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "author": "Highoak",
   "license": "ISC",
